# machine-learning-exercise

./: .gitignore  README.md  pyproject.toml
.github/workflows/: auto-merge.yml  pr-tests.yml  update-scoreboards.yml
app/: challenges.py  config.py  grader.py  main.py  scoreboard.py
challenge-1-pydantic-ml-config/: README.md  SCOREBOARD.md  hints.md  learning.md  metadata.json  solution_template.py  test_solution.py
challenge-1-pydantic-ml-config/submissions/LLionNg/: solution.py
challenge-2-tensor-operations/: README.md  SCOREBOARD.md  hints.md  learning.md  metadata.json  solution_template.py  test_solution.py
challenge-3-pytorch-neural-network/: README.md  SCOREBOARD.md  hints.md  learning.md  metadata.json  solution_template.py  test_solution.py
challenge-4-pytorch-autograd/: README.md  SCOREBOARD.md  hints.md  learning.md  metadata.json  run_tests.sh  solution_template.py  test_solution.py
challenge-5-tensorflow-gradienttape/: README.md  SCOREBOARD.md  hints.md  learning.md  metadata.json  solution_template.py  test_solution.py
challenge-6-pytorch-sequential/: README.md  SCOREBOARD.md  hints.md  learning.md  metadata.json  solution_template.py  test_solution.py
challenge-7-keras-sequential/: README.md  SCOREBOARD.md  hints.md  learning.md  metadata.json  solution_template.py  test_solution.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  api.ts  highlight.css  index.css  main.tsx
frontend/src/components/: CodeEditor.tsx
scripts/: grade_submission.py  update_scoreboards.py
(+17 files in other folders)
